--- a/resources/assets/styles/common/_mixins.scss
+++ b/resources/assets/styles/common/_mixins.scss
@@ -254,7 +254,7 @@
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
-  line-height: $lineHeight;
+  line-height: $lineHeight + unquote($unit);
   display: block;
 
   /*! autoprefixer: off */
