--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -1,7 +1,9 @@
-.banner .nav li {
-  @extend .nav-item;
+.navbar {
+  background-color: $white;
 }
 
-.banner .nav a {
-  @extend .nav-link;
+.navbar-brand {
+  @include media-breakpoint-up(lg) {
+    position: absolute;
+  }
 }
