--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -12,6 +12,7 @@
 @import "components/wp-classes";
 @import "sections/newsletter";
 @import "sections/fifty-fifthy-section";
+@import "sections/resellers";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
