--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -10,6 +10,7 @@
 @import "components/forms";
 @import "components/section";
 @import "components/wp-classes";
+@import "components/product-details-inline";
 @import "sections/newsletter";
 @import "sections/fifty-fifthy-section";
 @import "layouts/header";
@@ -22,3 +23,4 @@
 @import "sections/product-listing";
 @import "sections/product-filter";
 @import "sections/three-promo";
+@import "sections/thankyou-details";
