--- a/resources/assets/styles/skhoop/sections/_three-promo.scss
+++ b/resources/assets/styles/skhoop/sections/_three-promo.scss
@@ -33,7 +33,7 @@
   }
 
   @include media-breakpoint-down(sm) {
-    max-width: 320px;
+    max-width: 20rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -75,7 +75,7 @@
 
   .info {
     margin: 0 auto 0.875rem;
-    max-width: 300px;
+    max-width: 18.75rem;
   }
 
   .btn {
@@ -89,9 +89,9 @@
 
   &.is-inline {
     @include media-breakpoint-down(sm) {
-      padding-left: 140px;
+      padding-left: 8.75rem;
       position: relative;
-      min-height: 120px;
+      min-height: 7.5rem;
 
       .h4 {
         @include line-clamp(1.25, 2, "rem");
@@ -102,8 +102,8 @@
         position: absolute;
         left: 0;
         top: 0;
-        width: 120px;
-        height: 120px;
+        width: 7.5rem;
+        height: 7.5rem;
       }
 
       figure {
