--- a/resources/assets/styles/skhoop/sections/_category-banner.scss
+++ b/resources/assets/styles/skhoop/sections/_category-banner.scss
@@ -29,7 +29,7 @@
     border-radius: 0.3125rem;
     background-color: $white;
 
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(lg) {
       width: 475px;
       padding: 0.8125rem 1.563rem 1.25rem 2.5rem;
     }
