text header and thankyou template

--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -25,3 +25,4 @@
 @import "sections/product-filter";
 @import "sections/three-promo";
 @import "sections/thankyou-details";
+@import "sections/text-header";
