hero banner css

--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -22,3 +22,4 @@
 @import "sections/product-listing";
 @import "sections/product-filter";
 @import "sections/three-promo";
+@import "sections/hero";
