--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -187,3 +187,6 @@ $breadcrumb-active-color:     $body-color;
 
 // Modals
 $modal-content-border-radius: 0.3125rem;
+
+// Promo box colors
+$promo-box-colors: ($white, rgba(235, 227, 207, 0.25), rgba(218, 180, 180, 0.25));
