--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -23,3 +23,4 @@
 @import "sections/product-listing";
 @import "sections/product-filter";
 @import "sections/three-promo";
+@import "sections/promo-box";
