--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -2,25 +2,30 @@ $mobile-margin-top-menu: 3.75rem;
 
 .navbar {
   background-color: $white;
-  padding: 0.5rem 1.875rem 0.4375rem;
+  padding: 0.3125rem 1.875rem 0.25rem;
 
   @include media-breakpoint-up(lg) {
-    padding: 0.9063rem 1rem 0.6563rem;
+    padding: 0 1rem;
+  }
+
+  & > .container {
+    position: relative;
   }
 }
 
 .navbar-brand {
+  @include media-breakpoint-up(lg) {
+    padding: 1.125rem 0 1.0625rem;
+  }
+
   img {
     max-width: 5.8125rem;
     height: auto;
     display: none;
 
-    @include media-breakpoint-up(md) {
-      max-width: 8.75rem;
-    }
-
     @include media-breakpoint-up(lg) {
       display: inline;
+      max-width: 8.75rem;
     }
 
     &.mobile-logo {
@@ -33,8 +38,34 @@ $mobile-margin-top-menu: 3.75rem;
   }
 }
 
+.navbar-helper {
+  .nav-item {
+    cursor: pointer;
+
+    @include media-breakpoint-up(lg) {
+      padding: 25px 0;
+    }
+
+    &:hover {
+      @include media-breakpoint-up(lg) {
+        background-color: $lightGreen;
+      }
+    }
+  }
+
+  .nav-item-cart:hover .cart {
+    @include media-breakpoint-up(lg) {
+      max-height: calc(100vh - 5rem);
+    }
+  }
+
+  .nav-item-cart.is-open .cart {
+    max-height: calc(100vh - 5rem);
+  }
+}
+
 .navbar-toggler {
-  @include hamburger(28px, 22px);
+  @include hamburger(1.75rem, 1.375rem);
 
   &:hover,
   &:focus {
@@ -51,6 +82,7 @@ $mobile-margin-top-menu: 3.75rem;
   @include media-breakpoint-up(lg) {
     width: 8.75rem;
   }
+
 }
 
 .navbar-nav {
@@ -103,6 +135,7 @@ $mobile-margin-top-menu: 3.75rem;
           width: 100%;
           max-width: 23.4375rem;
           height: 100vh !important;
+          overflow-y: auto;
           margin-top: $mobile-margin-top-menu;
           background-color: $white;
           border: none;
@@ -149,6 +182,10 @@ $mobile-margin-top-menu: 3.75rem;
         font-size: 1rem;
         letter-spacing: 1px;
         line-height: 24px;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
 
       &-cart {
@@ -195,7 +232,8 @@ $mobile-margin-top-menu: 3.75rem;
     bottom: 0;
     width: 100%;
     max-width: 23.4375rem;
-    height: 100vh;
+    height: 100vh !important;
+    overflow-y: auto;
     margin-top: $mobile-margin-top-menu;
     background-color: $green;
   }
@@ -246,15 +284,15 @@ $mobile-margin-top-menu: 3.75rem;
   }
 }
 
-.overlay-body {
+.nav-overlay {
 	&:after {
-		content: "";
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: rgba($black, 0.5);
-		z-index: 3;
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(41,41,41,0.8);
+    z-index: 3;
 	}
 }
