--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -10,6 +10,8 @@
 @import "components/forms";
 @import "components/section";
 @import "components/wp-classes";
+@import "components/picker";
+@import "components/cart";
 @import "sections/newsletter";
 @import "sections/fifty-fifthy-section";
 @import "layouts/header";
