--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -11,6 +11,7 @@
 @import "components/section";
 @import "components/wp-classes";
 @import "components/product-details-inline";
+@import "components/summary-group";
 @import "sections/newsletter";
 @import "sections/fifty-fifthy-section";
 @import "sections/resellers";
@@ -26,3 +27,4 @@
 @import "sections/three-promo";
 @import "sections/thankyou-details";
 @import "sections/text-header";
+@import "sections/checkout";
