--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -12,6 +12,8 @@
 @import "components/wp-classes";
 @import "components/picker";
 @import "components/cart";
+@import "components/product-details-inline";
+@import "components/summary-group";
 @import "sections/newsletter";
 @import "sections/fifty-fifthy-section";
 @import "layouts/header";
@@ -27,3 +29,4 @@
 @import "sections/hero";
 @import "sections/resellers";
 @import "sections/promo-box";
+@import "sections/checkout";
