--- a/resources/assets/styles/skhoop/sections/_checkout.scss
+++ b/resources/assets/styles/skhoop/sections/_checkout.scss
@@ -25,11 +25,19 @@
   }
 
   .product-shipping {
-    max-width: 29.875rem;
+    max-width: 20rem;
+
+    @include media-breakpoint-up(lg) {
+      max-width: 29.875rem;
+    }
   }
 
   .delivery-payment {
-    max-width: 21.875rem;
+    max-width: 20rem;
+
+    @include media-breakpoint-up(lg) {
+      max-width: 21.875rem;
+    }
   }
 
   .h3 {
