hero banner css

--- a/resources/assets/styles/common/_mixins.scss
+++ b/resources/assets/styles/common/_mixins.scss
@@ -13,7 +13,9 @@
   > img,
   > video,
   > figure,
-  > .ratio-content {
+  > .ratio-content,
+  > iframe,
+  > .ratio-iframe {
     position: absolute;
     top: 0;
     left: -9999px;
@@ -27,16 +29,21 @@
     object-fit: cover; //act like background-size: cover if supported
   }
 
-  > .ratio-iframe,
   > iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
+    min-height: 200%;
+    min-width: 200%;
   }
+
+  // > .ratio-iframe,
+  // > iframe {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   height: 100%;
+  //   width: 100%;
+  // }
 }
 
 @mixin aspect-ratio-fullwidth($width, $height, $heightType) {
