--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -31,3 +31,5 @@
 @import "sections/promo-box";
 @import "sections/checkout";
 @import "sections/thankyou-details";
+@import "sections/popular-products";
+@import "sections/text-button";
