--- a/resources/assets/styles/skhoop/components/_cart.scss
+++ b/resources/assets/styles/skhoop/components/_cart.scss
@@ -15,9 +15,13 @@
   }
 
   &-wrapper {
-    padding: 1.375rem 1.25rem 2.0625rem;
+    padding: 0.25rem 0.75rem 1.875rem;
     background-color: $lightGreen;
     border-radius: 0.3125rem;
+
+    @include media-breakpoint-up(lg) {
+      padding: 1.375rem 1.25rem 2.0625rem;
+    }
 
     &.is-mobile {
       .cart-title {
@@ -97,6 +101,23 @@
 
     .summary {
       line-height: 1.25rem;
+
+      &-group {
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+
+      &-item {
+        padding: 0;
+        border-top: none !important;
+        border-bottom: none !important;
+        font-size: 0.875rem;
+        line-height: 1.375rem;
+
+        @include media-breakpoint-up(lg) {
+          line-height: 1.25rem;
+        }
+      }
     }
   }
 
