--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -14,6 +14,7 @@
 @import "components/cart";
 @import "components/product-details-inline";
 @import "components/summary-group";
+@import "components/cookies";
 @import "sections/newsletter";
 @import "sections/fifty-fifthy-section";
 @import "layouts/header";
