Text Button HTML & CSS Update

--- a/resources/assets/styles/skhoop/components/_section.scss
+++ b/resources/assets/styles/skhoop/components/_section.scss
@@ -1,20 +1,53 @@
 //
 // Section
 // --------------------------------------------------
-$section-margin-bottom:             100px;
-$section-margin-bottom-touch:       50px;
+$section-margin:             100px;
+$section-margin-touch:       50px;
 
-$section-padding-bottom:            100px;
-$section-padding-bottom-touch:      50px;
+$section-padding:            100px;
+$section-padding-touch:      50px;
 
-$section-margin-bottom-sm:          70px;
-$section-margin-bottom-sm-touch:    40px;
+$section-margin-sm:          70px;
+$section-margin-sm-touch:    40px;
+
+$section-padding-sm:         70px;
+$section-padding-sm-touch:      40px;
 
 .section {
-  margin-bottom: $section-margin-bottom-touch;
+  margin-bottom: $section-margin-touch;
 
   @include media-breakpoint-up(lg) {
-    margin-bottom: $section-margin-bottom;
+    margin-bottom: $section-margin;
+  }
+
+  &.has-small-mb,
+  &.has-small-mb-next-section {
+    margin-bottom: $section-margin-sm-touch;
+
+    @include media-breakpoint-up(lg) {
+      margin-bottom: $section-margin-sm;
+    }
+  }
+
+  &.no-mb {
+    margin-bottom: 0;
+  }
+
+  &.has-pt {
+    padding-top: $section-padding-touch;
+
+    @include media-breakpoint-up(lg) {
+      padding-top: $section-padding;
+    }
+  }
+
+  &.has-small-pt,
+  &.has-small-pt-next-section {
+    padding-top: $section-padding-sm-touch;
+
+    @include media-breakpoint-up(lg) {
+      padding-top: $section-padding-sm;
+    }
   }
 
   // &.has-pb {
@@ -26,26 +59,9 @@ $section-margin-bottom-sm-touch:    40px;
   // }
 
 
-  &.is-small-mb,
-  &.is-small-mb-next-section {
-    margin-bottom: $section-margin-bottom-sm-touch;
 
-    @include media-breakpoint-up(lg) {
-      margin-bottom: $section-margin-bottom-sm;
-    }
-  }
 
-  &.no-mb {
-    margin-bottom: 0;
-  }
 
-  &.has-padding-top {
-    padding-bottom: $section-padding-bottom-touch;
-
-    @include media-breakpoint-up(lg) {
-      padding-bottom: $section-padding-bottom;
-    }
-  }
 
   // &.is-last {
   //     &.has-bg {
