--- a/resources/assets/styles/skhoop/common/_typography.scss
+++ b/resources/assets/styles/skhoop/common/_typography.scss
@@ -65,6 +65,7 @@ h2,
   font-weight: $font-weight-semibold;
   letter-spacing: 0.03px;
   line-height: $h2-line-height-touch;
+  text-transform: initial;
 
   @include media-breakpoint-up(lg) {
     @include font-size($h2-font-size);
@@ -79,6 +80,7 @@ h3,
   font-weight: $font-weight-light;
   letter-spacing: -0.16px;
   line-height: $h3-line-height-touch;
+  text-transform: initial;
 
   @include media-breakpoint-up(lg) {
     @include font-size($h3-font-size);
@@ -110,6 +112,7 @@ h5,
   font-weight: $font-weight-normal;
   letter-spacing: 0.5px;
   line-height: $h5-line-height-touch;
+  text-transform: initial;
 
   @include media-breakpoint-up(lg) {
     @include font-size($h5-font-size);
@@ -124,6 +127,7 @@ h6,
   font-weight: $font-weight-normal;
   letter-spacing: 0.5px;
   line-height: $h6-line-height-touch;
+  text-transform: initial;
 
   @include media-breakpoint-up(lg) {
     @include font-size($h6-font-size);
@@ -184,7 +188,11 @@ p {
   img {
     &.aligncenter,
     &.alignnone {
-      margin: 2.875rem auto;
+      margin: 1.625rem auto;
+
+      @include media-breakpoint-up(lg) {
+        margin: 2.875rem auto;
+      }
     }
   }
 
