--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -15,6 +15,7 @@
 @import "components/product-details-inline";
 @import "components/summary-group";
 @import "components/cookies";
+@import "vendor/flickity";
 @import "sections/newsletter";
 @import "sections/fifty-fifthy-section";
 @import "layouts/header";
