--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -34,4 +34,5 @@
 @import "sections/checkout";
 @import "sections/thankyou-details";
 @import "sections/popular-products";
+@import "sections/selected-product";
 @import "sections/text-button";
