--- a/resources/assets/styles/skhoop/sections/_hero.scss
+++ b/resources/assets/styles/skhoop/sections/_hero.scss
@@ -12,7 +12,7 @@
 
         .hero-background {
             width: 100%;
-            height: 100%;
+            // height: 100%;
             position: relative;
             background-size: cover;
             background-repeat: no-repeat;
