--- a/resources/assets/styles/skhoop/sections/_hero.scss
+++ b/resources/assets/styles/skhoop/sections/_hero.scss
@@ -16,6 +16,7 @@
             position: relative;
             background-size: cover;
             background-repeat: no-repeat;
+            background-position: center;
 
             position: relative;
             @include aspect-ratio(1440, 560);
@@ -111,7 +112,7 @@
 
 
         .hero-play-btn {
-            z-index: 3;
+            
             height: 100%;
             width: 100%;
             padding: 2rem;
@@ -127,6 +128,7 @@
             right: 0;
             z-index: 1;
             color: $white;
+            z-index: 3;
 
             button {
                 width: 5rem;
