re-install node_modules

--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -16,6 +16,7 @@
 @import "components/summary-group";
 @import "components/cookies";
 @import "vendor/flickity";
+@import "vendor/flickity-fullscreen";
 @import "sections/newsletter";
 @import "sections/fifty-fifthy-section";
 @import "layouts/header";
