--- a/resources/assets/styles/skhoop/sections/_selected-product.scss
+++ b/resources/assets/styles/skhoop/sections/_selected-product.scss
@@ -4,6 +4,12 @@
   }
 
   &-slider {
+    border-radius: 5px;
+
+    .flickity-viewport {
+      height: 100%;
+    }
+
     .item {
       width: 100%;
 
@@ -27,6 +33,7 @@
       padding: 1.4375rem 0.9375rem 1.4375rem;
       border-radius: 5px;
       box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
+      cursor: pointer;
 
       &:first-child {
         margin-top: 0;
@@ -36,9 +43,27 @@
         margin-bottom: 0;
       }
 
+      &:hover {
+        opacity: 0.8;
+      } 
+
       figure {
         @include aspect-ratio(35, 57);
       }
+    }
+  }
+
+  .fullscreen {
+    background: rgba(247, 247, 247, 0.4);
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: $zindex-modal;
+
+    &.inactive {
+      display: none;
     }
   }
 }
