instagram desktop grid layout

--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -35,3 +35,4 @@
 @import "sections/thankyou-details";
 @import "sections/popular-products";
 @import "sections/text-button";
+@import "sections/instagram";
