Product Listing CSS Update

--- a/resources/assets/styles/skhoop/sections/_product-listing.scss
+++ b/resources/assets/styles/skhoop/sections/_product-listing.scss
@@ -216,6 +216,10 @@
     color: $body-color;
     border-bottom-right-radius: 0.3125rem;
     border-bottom-left-radius: 0.3125rem;
+
+    &:hover {
+      color: $body-color;
+    }
   }
 
   &-name {
