--- a/resources/assets/styles/skhoop/sections/_instagram.scss
+++ b/resources/assets/styles/skhoop/sections/_instagram.scss
@@ -1,13 +1,21 @@
+
 .instagram-gallery {
   overflow-x: hidden;
+  padding-top: 4.375rem;
+  padding-bottom: 3.4375rem;
+  @include cover;
+
+  .image {
+    @include relate-aspect-ratio;
+  }
 
   .col-wrap {
-    margin-left: -6.034%;
-    margin-right: -6.034%;
+    margin-left: -5.695%;
+    margin-right: -5.695%;
 
     @include media-breakpoint-up(lg) {
-      margin-left: -87px;
-      margin-right: -87px;
+      margin-left: -82px;
+      margin-right: -82px;
     }
   }
 
@@ -26,7 +34,7 @@
   .tile-block-hidden {
     position: relative;
     padding-left: calc(3.712% / 2);
-    padding-top: calc(( (25% * 3) - 12.6%) - (50% - 3.712%));
+    padding-top: calc(( (25% * 3) - 11.595%) - (50% - 3.712%));
     margin-left: -25%;
 
     @include flex(0 0 calc(100% - ( 3.712% / 2) ));
@@ -34,7 +42,7 @@
 
     @include media-breakpoint-up(lg) {
       padding-left: 15px;
-      padding-top: calc(( (25% * 3) - 95px) - (50% - 30px));
+      padding-top: calc(( (25% * 3) - 93px) - (50% - 30px));
 
       @include flex(0 0 calc(100% - 15px ));
       
@@ -42,7 +50,9 @@
   }
 
   .instagram-info-margin {
-    margin-bottom: -9.034%;
+    margin-bottom: -7.8%;
+    position: relative;
+    z-index: 1;
   }
 
   .instagram-info {
@@ -59,14 +69,26 @@
       margin-bottom: 22px;
     }
 
+    .btn {
+      @include media-breakpoint-up(lg) {
+        min-width: 12.125rem;
+      }
+    }
+
     .h3 {
       margin-bottom: 0;
       line-height: normal;
       margin-left: 12px;
     }
+
+    .info {
+      padding-left: 1.25rem;
+      padding-right: 1.25rem;
+    }
   }
 
   .tile {
+    @include relate-aspect-ratio;
     @include flex( 0 0 calc(25% - 3.712%) );
 
     padding-top: calc(25% - 3.712%);
@@ -81,14 +103,14 @@
     }
 
     &.is-three {
-      @include flex( 0 0 calc( (25% * 3) - 12.6%) );
+      @include flex( 0 0 calc( (25% * 3) - 11.595%) );
 
-      padding-top: calc((25% * 3) - 12.6%);
+      padding-top: calc((25% * 3) - 11.595%);
 
       @include media-breakpoint-up(lg) {
-        @include flex(0 0 calc( (25% * 3) - 95px));
+        @include flex(0 0 calc( (25% * 3) - 93px));
 
-        padding-top: calc((25% * 3) - 95px);
+        padding-top: calc((25% * 3) - 93px);
       }
     }
   }
