--- a/resources/assets/styles/skhoop/sections/_instagram.scss
+++ b/resources/assets/styles/skhoop/sections/_instagram.scss
@@ -52,6 +52,10 @@
     margin-bottom: -7.8%;
     position: relative;
     z-index: 1;
+
+    @include media-min(1441px) {
+      margin-bottom: -5.75%;
+    }
   }
 
   .instagram-info {
